# simple-dw

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml  workspace.yaml
dw/: dbt_project.yml  profiles.yml
dw/macros/: cents_to_dollars.sql
dw/models/dwd/: dwd.yaml  dwd_customers.sql  dwd_customers.yaml  dwd_locations.sql  dwd_locations.yaml  dwd_order_items.sql  dwd_order_items.yaml  dwd_orders.sql  dwd_orders.yaml  dwd_products.sql  dwd_products.yaml  dwd_supplies.sql  dwd_supplies.yaml  sources.yaml
dw/models/dws/: _models.yaml  customers.sql  customers.yaml  dws.yaml  locations.sql  locations.yaml  order_items.sql  order_items.yaml  orders.sql  orders.yaml  products.sql  products.yaml  supplies.sql  supplies.yaml  time_spine_daily.sql
dw_dagster/: definitions.py  project.py  schedules.py
dw_dagster/assets/: dbt_assets.py  raw_assets.py
dw_dagster/dw_dagster/: assets.py  definitions.py  environment.py  jobs.py  project.py  resources.py  schedules.py  sensors.py
ods_dagster/ods_dagster/: definitions.py  resources.py
ods_dagster/ods_dagster/jaffle_shop/: dev_assets.py
taskfiles/dev/: Taskfile.yaml
